[package]
name = "kclvm-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
name = "kclvm_api"

[dependencies]
protobuf = "3.1.0"
serde_json = "1.0"
serde_yaml = "0.9.2"
protobuf-json-mapping = "3.1.0"
serde = { version = "1", features = ["derive"] }
kclvm = { git = "https://github.com/KusionStack/KCLVM", branch = "main" }

kclvm-runner = {git = "https://github.com/KusionStack/KCLVM",  branch = "main" }
kclvm-parser = {git = "https://github.com/KusionStack/KCLVM",branch = "main" }
kclvm-ast = {git = "https://github.com/KusionStack/KCLVM", branch = "main"}
kclvm-runtime = {git = "https://github.com/KusionStack/KCLVM", branch = "main" }

[dev-dependencies]
criterion = "0.3"

[build_dependencies]
protobuf-codegen= "3.1.0"
protoc-bin-vendored = "3.0.0"

[profile.release]
rpath = true
panic = "unwind"
opt-level = "z"  # Optimize for size.
lto = true

[[bench]]
name = "my_benchmark"
harness = false